--- a/Components/AngularComponents/src/app/header/header.component.html
+++ b/Components/AngularComponents/src/app/header/header.component.html
@@ -3,6 +3,6 @@
         <img src="../../assets/back2.jpg" alt="">
     </div>
     <div class="site-slogin">
-        <h1>Your one stop shop for everyting</h1>
+        <h1>{{getSlowgan()}}</h1>
     </div>
 </div>
