--- a/Components/AngularComponents/src/app/nav/nav.component.html
+++ b/Components/AngularComponents/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <div class="navbar">
     <div class="site-name">
-        <h2>AS Lab</h2>
+        <h2>{{sitename}}</h2>
     </div>
     <div class="site-menu">
         <a href="#">Home</a>
