--- a/Components/AngularComponents/src/app/header/header.component.html
+++ b/Components/AngularComponents/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
     <div class="site-img">
-        <img src="../../assets/back2.jpg" alt="">
+        <img [src]="logoImg" alt="">
     </div>
     <div class="site-slogin">
         <h1>{{getSlowgan()}}</h1>
